fix spacing between sections

--- a/docs/src/components/Index/FeaturesSection/FeaturesSection.module.css
+++ b/docs/src/components/Index/FeaturesSection/FeaturesSection.module.css
@@ -1,5 +1,12 @@
 .features {
   row-gap: 2rem;
+  padding-bottom: 4rem;
+}
+
+@media screen and (max-width: 996px) {
+  .features {
+    padding-bottom: 0;
+  }
 }
 
 .featureSvg {
