--- a/docs/src/components/Index/QuickStartSection/QuickStartSection.module.css
+++ b/docs/src/components/Index/QuickStartSection/QuickStartSection.module.css
@@ -1,3 +1,8 @@
+.section {
+    background-color: var(--ifm-footer-background-color);
+    color: var(--ifm-footer-color);
+}
+
 .markdownContainer h1 {
     display: none;
     text-align: center;
