--- a/docs/src/css/global.css
+++ b/docs/src/css/global.css
@@ -18,8 +18,17 @@
 .section__ref::before {
     content: '';
     display: block;
-    height: 64px;
-    margin: -32px 0 0;
+    height: 4rem;
+    margin: -2rem 0 0;
+}
+
+.section__ref {
+    text-decoration: underline;
+    text-underline-offset: 0.75rem;
+    text-decoration-color: var(--ifm-color-primary);
+    text-decoration-style: wavy;
+    font-size: 2.5rem;
+    padding-bottom: 1.5rem;
 }
 
 /* Section */
